--- a/bakalarka_prace.xcodeproj/xcshareddata/xcschemes/bakalarka_prace.xcscheme
+++ b/bakalarka_prace.xcodeproj/xcshareddata/xcschemes/bakalarka_prace.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1320"
-   version = "1.3">
+   version = "2.0">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "98EAF19721525AF500A707A9"
-               BuildableName = "bakalarka_prace_v0.01.app"
-               BlueprintName = "bakalarka_prace_v0.01"
-               ReferencedContainer = "container:bakalarka_prace_v0.01.xcodeproj">
+               BuildableName = "bakalarka_prace.app"
+               BlueprintName = "bakalarka_prace"
+               ReferencedContainer = "container:bakalarka_prace.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -31,9 +31,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "98EAF19721525AF500A707A9"
-            BuildableName = "bakalarka_prace_v0.01.app"
-            BlueprintName = "bakalarka_prace_v0.01"
-            ReferencedContainer = "container:bakalarka_prace_v0.01.xcodeproj">
+            BuildableName = "bakalarka_prace.app"
+            BlueprintName = "bakalarka_prace"
+            ReferencedContainer = "container:bakalarka_prace.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <Testables>
@@ -44,21 +44,27 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
+      askForAppToLaunch = "Yes"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      allowLocationSimulation = "YES"
+      launchAutomaticallySubstyle = "2">
+      <RemoteRunnable
+         runnableDebuggingMode = "1"
+         BundleIdentifier = "com.czernyjan.bakalarka-prace-v0-01"
+         RemotePath = "/Users/pernicek/Library/Developer/CoreSimulator/Devices/FFEB6B97-B7C5-4096-B73D-3275EE624939/data/Containers/Bundle/Application/B36F709A-2C94-4BAD-AE26-991698F19F44/bakalarka_prace_v0.01.app">
+      </RemoteRunnable>
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "98EAF19721525AF500A707A9"
-            BuildableName = "bakalarka_prace_v0.01.app"
-            BlueprintName = "bakalarka_prace_v0.01"
-            ReferencedContainer = "container:bakalarka_prace_v0.01.xcodeproj">
+            BuildableName = "bakalarka_prace.app"
+            BlueprintName = "bakalarka_prace"
+            ReferencedContainer = "container:bakalarka_prace.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -66,16 +72,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "98EAF19721525AF500A707A9"
-            BuildableName = "bakalarka_prace_v0.01.app"
-            BlueprintName = "bakalarka_prace_v0.01"
-            ReferencedContainer = "container:bakalarka_prace_v0.01.xcodeproj">
+            BuildableName = "bakalarka_prace.app"
+            BlueprintName = "bakalarka_prace"
+            ReferencedContainer = "container:bakalarka_prace.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
